--- a/Source/HyperUnity/HyperUnity.csproj
+++ b/Source/HyperUnity/HyperUnity.csproj
@@ -10,8 +10,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>HyperUnity</RootNamespace>
     <AssemblyName>HyperUnity</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <LangVersion>latestmajor</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -39,6 +40,9 @@
     <Reference Include="0Harmony">
       <HintPath>..\..\..\..\..\..\workshop\content\294100\2009463077\1.4\Assemblies\0Harmony.dll</HintPath>
     </Reference>
+    <Reference Include="AdaptiveStorageFramework">
+      <HintPath>..\..\..\..\..\..\workshop\content\294100\3033901359\1.5\Assemblies\AdaptiveStorageFramework.dll</HintPath>
+    </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>..\..\..\..\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
@@ -57,6 +61,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Buildings\Building_WealthCovert.cs" />
     <Compile Include="Buildings\Building_WithoutZoneSettings.cs"/>
     <Compile Include="Comps\HediffComps\HediffComp_FixWorstCycle.cs"/>
     <Compile Include="Comps\HediffComps\HediffComp_SkillDeplete.cs"/>
